added header text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 
 <body>
-    <h1> Hello World </h1>
-    <h2> hi </h2>
+    <h1> Where would you like to travel? </h1>
+    <h2> Pick somewhere on the map, to find out where we think you might like to travel to! </h2>
+<div>
+    <img src="" alt="">
+</div>
 </body>
 
 </html>
