--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <h1> Where would you like to travel? </h1>
     <h2> Pick somewhere on the map, to find out where we think you might like to travel to! </h2>
-<div>
-    <img src="" alt="">
-</div>
+    <div>
+        <img src="" alt="">
+        <img src="cinqueterre.jpg" class="rounded-circle" alt="Cinque Terre">
+    </div>
 </body>
 
 </html>
