--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> Where would you like to travel? </h1>
     <h2> Pick somewhere on the map, to find out where we think you might like to travel to! </h2>
 <div>
-    <img src="" alt="">
+    <img src="https://image.shutterstock.com/image-vector/map-line-260nw-300481502.jpg" alt="">
 </div>
 </body>
 
