--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 <div>
     <img src="C:\Users\Jennahowieson\WebDev CFG1\project\CFGProject\world map.jpg">
 </div>
+
+<div> 
+    <h2> Stay In Touch With Us</h2>
+    <form action="/action_page.php">
+        <label for="fname">Name:</label><br>
+        <input type="text" id="fname" name="fname" value="Name"><br>
+        <label for="lname">Email:</label><br>
+        <input type="text" id="lname" name="lname" value="email"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+</div>
 </body>
 
 </html>
